volunteer/static/css/volunteer.css
/*
 *  Shift Grid
 */
div.shift-grid .table td.panel {
    padding: 0px;
}
div.shift-grid .table td.panel:hover {
    background-color: #f5f5f5;
}
div.shift-grid .table td.panel div.panel-heading {
    font-size: 12px;
    background-color: #f5f5f5;
}
div.shift-grid .table td.panel.empty:hover {
    background-color: #fff;
}


/*
 *  Department Detail Page
 */
div.role h4 a.role-quicklink {
    display: none;
    font-size: 12px;
}
div.role h4:hover a.role-quicklink {
    display: inline;
}


/*
 * Background and container backgrounds
 * to compliment bootstra-black.min.css
 */
body {   
    background: #000 url("../img/Apogaea_web_header_2015_voldb.jpg") no-repeat center 40px;
}

.container {
    margin-top: 220px; 
    background-color: rgba(0,0,0,0.9);     
    border-radius: 15px;
}

